--- a/README
+++ b/README
@@ -1,4 +1,12 @@
-Candlepin is an entitlement server used to manage entitlements.
+Candlepin is a service which allows companies to manage software
+subscriptions. The subscriptions allow users to access
+content provided by those subscriptions over secure connections.
 
-https://fedorahosted.org/candlepin/
+The server exposes functionality over a REST API, and stores data
+in a backend SQL database. The source code is delivered under the
+GPL. See LICENSE for explicit version information.
 
+More information on the service can be found at
+https://fedorahosted.org/candlepin/. Questions can be sent to the
+mailing list at https://lists.fedorahosted.org/mailman/listinfo/candlepin
+or on Freenode at #candlepin.
