--- a/po/fr.po
+++ b/po/fr.po
@@ -4,14 +4,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-06-19 16:01-0300\n"
+"POT-Creation-Date: 2012-06-27 12:35-0400\n"
 "PO-Revision-Date: 2013-03-21 01:16-0400\n"
 "Last-Translator: samfreemanz <sfriedma@redhat.com>\n"
 "Language-Team: French\n"
-"Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: fr\n"
 "Plural-Forms: nplurals=2; plural=(n > 1)\n"
 "X-Generator: Zanata 2.2.2\n"
 
@@ -576,8 +576,8 @@ msgstr "La quantité doit être plus que 0"
 msgid ""
 "Cannot add pools restricted to consumer type 'person' to activation keys."
 msgstr ""
-"Impossible d'ajouter les pools restreints au type de consommateur « person » "
-"aux clés d'activation."
+"Impossible d'ajouter les pools restreints au type de consommateur « person »"
+" aux clés d'activation."
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author samfreemanz
@@ -594,12 +594,14 @@ msgstr ""
 # keys, author samfreemanz
 #: src/main/java/org/candlepin/resource/ActivationKeyResource.java:155
 msgid "The quantity must not be greater than the total allowed for the pool"
-msgstr "La quantité ne doit pas être supérieure au total autorisé pour le pool"
+msgstr ""
+"La quantité ne doit pas être supérieure au total autorisé pour le pool"
 
 #: src/main/java/org/candlepin/resource/ActivationKeyResource.java:216
 #, java-format
 msgid "ActivationKey with id {0} could not be found."
-msgstr "Impossible de trouver la clé d'activation ActivationKey avec l'ID {0}."
+msgstr ""
+"Impossible de trouver la clé d'activation ActivationKey avec l'ID {0}."
 
 #: src/main/java/org/candlepin/resource/ActivationKeyResource.java:227
 #, java-format
@@ -617,7 +619,8 @@ msgstr "Impossible de trouver le contenu avec l'ID {0}."
 #: src/main/java/org/candlepin/resource/RulesResource.java:85
 msgid "Error decoding the rules. The text should be base 64 encoded"
 msgstr ""
-"Erreur lors du décodage des règles. Le texte devrait être encodé avec base 64"
+"Erreur lors du décodage des règles. Le texte devrait être encodé avec base "
+"64"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys
@@ -664,7 +667,8 @@ msgstr "Impossible de trouver l'événement avec l'ID « {0} »."
 #: src/main/java/org/candlepin/resource/OwnerResource.java:264
 #, java-format
 msgid "Could not create the Owner: {0}. Parent {1} does not exist."
-msgstr "Impossible de créer le propriétaire : {0}. Le parent {1} n'existe pas."
+msgstr ""
+"Impossible de créer le propriétaire : {0}. Le parent {1} n'existe pas."
 
 #: src/main/java/org/candlepin/resource/OwnerResource.java:276
 #, java-format
@@ -830,8 +834,8 @@ msgstr ""
 
 #: src/main/java/org/candlepin/resource/JobResource.java:114
 msgid ""
-"You must specify one of owner key, consumer UUID, or principal name, but not "
-"all."
+"You must specify one of owner key, consumer UUID, or principal name, but not"
+" all."
 msgstr ""
 "Vous devez spécifier un propriétaire de clé, un UUID de consommateur, ou un "
 "nom principal, mais pas tout."
@@ -1032,7 +1036,8 @@ msgstr "L'archive ne contient pas le répertoire des droits d'accès requis"
 #, java-format
 msgid "The archive {0} is not a properly compressed file or is empty"
 msgstr ""
-"L'archive {0} est un fichier qui n'est pas compressé correctement ou est vide"
+"L'archive {0} est un fichier qui n'est pas compressé correctement ou est "
+"vide"
 
 #: src/main/java/org/candlepin/sync/ConsumerImporter.java:59
 msgid "No ID for upstream subscription management application."
@@ -1117,19 +1122,20 @@ msgid ""
 "subscription: {1}. A newer client may be available to address this problem."
 msgstr ""
 "Le client doit prendre en charge au moins v{0} certificats afin d'utiliser "
-"l'abonnement : {1}. Un client plus récent peut être disponible pour résoudre "
-"ce problème."
+"l'abonnement : {1}. Un client plus récent peut être disponible pour résoudre"
+" ce problème."
 
 #: src/main/java/org/candlepin/service/impl/DefaultEntitlementCertServiceAdapter.java:278
 #, java-format
 msgid ""
 "Too many content sets for certificate {0}. A newer client may be available "
-"to address this problem. See kbase https://access.redhat.com/knowledge/"
-"node/129003 for more information."
+"to address this problem. See kbase "
+"https://access.redhat.com/knowledge/node/129003 for more information."
 msgstr ""
 "Trop d'ensembles de contenus pour le certificat {0}. Un client plus récent "
-"peut être disponible pour résoudre ce problème. Voir kbase https://access."
-"redhat.com/knowledge/node/129003 pour obtenir davantage d'informations."
+"peut être disponible pour résoudre ce problème. Voir kbase "
+"https://access.redhat.com/knowledge/node/129003 pour obtenir davantage "
+"d'informations."
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author samfreemanz
@@ -1212,7 +1218,8 @@ msgstr ""
 #: src/main/java/org/candlepin/controller/Entitler.java:146
 #, java-format
 msgid ""
-"Consumer does not support instance based calculation required by pool ''{0}''"
+"Consumer does not support instance based calculation required by pool "
+"''{0}''"
 msgstr ""
 
 #: src/main/java/org/candlepin/controller/Entitler.java:150
@@ -1270,8 +1277,8 @@ msgstr "Ce consommateur est déjà abonné au produit ''{0}''"
 msgid ""
 "There are not enough free subscriptions available for the product ''{0}''"
 msgstr ""
-"Il n'y a pas suffisamment d'abonnements gratuits disponibles pour le produit "
-"« {0} »"
+"Il n'y a pas suffisamment d'abonnements gratuits disponibles pour le produit"
+" « {0} »"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author samfreemanz
@@ -1359,7 +1366,8 @@ msgstr ""
 # keys, author samfreemanz
 #: src/main/java/org/candlepin/model/ConsumerCurator.java:405
 #, java-format
-msgid "The consumer with UUID {0} is a virtual guest. It does not have guests."
+msgid ""
+"The consumer with UUID {0} is a virtual guest. It does not have guests."
 msgstr ""
 "Le consommateur avec l'UUID {0} est un invité virtuel. Il ne possède pas "
 "d'invités."
