--- a/po/it.po
+++ b/po/it.po
@@ -4,14 +4,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-06-19 16:01-0300\n"
+"POT-Creation-Date: 2012-06-27 12:35-0400\n"
 "PO-Revision-Date: 2013-03-20 09:51-0400\n"
 "Last-Translator: fvalen <fvalen@fedoraproject.org>\n"
 "Language-Team: Italian\n"
-"Language: it\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: it\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "X-Generator: Zanata 2.2.2\n"
 
@@ -488,7 +488,8 @@ msgstr "Impossibile trovare un entitlement con ID ''{0}''."
 #, java-format
 msgid "Entitlement Certificate with serial number {0} could not be found."
 msgstr ""
-"Impossibile trovare un Certificato dell''entitlement con numero di serie {0}."
+"Impossibile trovare un Certificato dell''entitlement con numero di serie "
+"{0}."
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author mospina
@@ -585,8 +586,8 @@ msgid ""
 "to the activation key with a quantity greater than one."
 msgstr ""
 "Errore: Solo i pool con sottoscrizioni al prodotto con entitlement multipli "
-"possono essere aggiunti alla chiave di attivazione con una quantità maggiore "
-"di uno."
+"possono essere aggiunti alla chiave di attivazione con una quantità maggiore"
+" di uno."
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author fvalen
@@ -747,8 +748,8 @@ msgstr "Errore nella lettura dell'archivio di esportazione"
 #, java-format
 msgid "Problem generating ueber cert for owner {0}"
 msgstr ""
-"Problemi durante la generazione di un euber cert (certificato master) per il "
-"proprietario {0}"
+"Problemi durante la generazione di un euber cert (certificato master) per il"
+" proprietario {0}"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author fvalen
@@ -825,12 +826,13 @@ msgstr "Impossibile trovare il pool di entitlement con ID ''{0}''."
 #: src/main/java/org/candlepin/resource/JobResource.java:108
 msgid "You must specify an owner key, consumer UUID, or principal name."
 msgstr ""
-"Specifica una chiave del proprietario, uuid dell'utenza o un nome principale."
+"Specifica una chiave del proprietario, uuid dell'utenza o un nome "
+"principale."
 
 #: src/main/java/org/candlepin/resource/JobResource.java:114
 msgid ""
-"You must specify one of owner key, consumer UUID, or principal name, but not "
-"all."
+"You must specify one of owner key, consumer UUID, or principal name, but not"
+" all."
 msgstr ""
 "Specifica uno tra la chiave del proprietario, UUID dell'utenza o un nome "
 "principale ma non tutti."
@@ -1116,15 +1118,15 @@ msgid ""
 "subscription: {1}. A newer client may be available to address this problem."
 msgstr ""
 "Il client deve supportare almeno i certificati v{0} per poter usare la "
-"sottoscrizione: {1}. Per risolvere questo problema può essere disponibile un "
-"nuovo client."
+"sottoscrizione: {1}. Per risolvere questo problema può essere disponibile un"
+" nuovo client."
 
 #: src/main/java/org/candlepin/service/impl/DefaultEntitlementCertServiceAdapter.java:278
 #, java-format
 msgid ""
 "Too many content sets for certificate {0}. A newer client may be available "
-"to address this problem. See kbase https://access.redhat.com/knowledge/"
-"node/129003 for more information."
+"to address this problem. See kbase "
+"https://access.redhat.com/knowledge/node/129003 for more information."
 msgstr ""
 "Troppi set del contenuto per il certificato {0}. Per risolvere questo "
 "problema può essere disponibile un nuovo client. Per maggiori informazioni "
@@ -1206,7 +1208,8 @@ msgstr ""
 #: src/main/java/org/candlepin/controller/Entitler.java:146
 #, java-format
 msgid ""
-"Consumer does not support instance based calculation required by pool ''{0}''"
+"Consumer does not support instance based calculation required by pool "
+"''{0}''"
 msgstr ""
 
 #: src/main/java/org/candlepin/controller/Entitler.java:150
@@ -1246,7 +1249,8 @@ msgstr ""
 #: src/main/java/org/candlepin/controller/Entitler.java:194
 #, java-format
 msgid "Unable to adjust quantity for the entitlement with id ''{0}'': {1}"
-msgstr "Impossibile regolare la quantità per l'entitlement con id ''{0}'': {1}"
+msgstr ""
+"Impossibile regolare la quantità per l'entitlement con id ''{0}'': {1}"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys
@@ -1268,7 +1272,8 @@ msgstr ""
 #: src/main/java/org/candlepin/controller/Entitler.java:244
 #, java-format
 msgid "Consumers of this type are not allowed to the product ''{0}''"
-msgstr "Gli utenti di questo tipo non sono abilitati a questo prodotto ''{0}''"
+msgstr ""
+"Gli utenti di questo tipo non sono abilitati a questo prodotto ''{0}''"
 
 #: src/main/java/org/candlepin/controller/Entitler.java:249
 #, java-format
@@ -1314,8 +1319,8 @@ msgstr "L'attributo ''{0}'' deve essere un valore booleano."
 msgid ""
 "You cannot create a circular reference for products that ''{0}'' relies on."
 msgstr ""
-"Non è possibile creare un riferimento circolare con i prodotti utilizzati da "
-"''{0}''"
+"Non è possibile creare un riferimento circolare con i prodotti utilizzati da"
+" ''{0}''"
 
 # translation auto-copied from project Candlepin, version master, document
 # keys
@@ -1346,5 +1351,7 @@ msgstr ""
 # keys
 #: src/main/java/org/candlepin/model/ConsumerCurator.java:405
 #, java-format
-msgid "The consumer with UUID {0} is a virtual guest. It does not have guests."
-msgstr "L'utenza con un UUID {0} è un guest virtuale. Non presenta alcun guest"
+msgid ""
+"The consumer with UUID {0} is a virtual guest. It does not have guests."
+msgstr ""
+"L'utenza con un UUID {0} è un guest virtuale. Non presenta alcun guest"
