--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -5,14 +5,14 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2013-06-19 16:01-0300\n"
+"POT-Creation-Date: 2012-06-27 12:35-0400\n"
 "PO-Revision-Date: 2013-03-19 08:23-0400\n"
 "Last-Translator: gcintra <gcintra@fedoraproject.org>\n"
 "Language-Team: Portuguese (Brazil)\n"
-"Language: pt-BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language: pt-BR\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "X-Generator: Zanata 2.2.2\n"
 
@@ -569,8 +569,8 @@ msgstr "A quantidade deve ser maior do que 0"
 msgid ""
 "Cannot add pools restricted to consumer type 'person' to activation keys."
 msgstr ""
-"Não é possível adicionar pools restritos ao tipo de consumidor 'pessoa' para "
-"chaves de ativação."
+"Não é possível adicionar pools restritos ao tipo de consumidor 'pessoa' para"
+" chaves de ativação."
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author rgyorfy
@@ -579,8 +579,8 @@ msgid ""
 "Error: Only pools with multi-entitlement product subscriptions can be added "
 "to the activation key with a quantity greater than one."
 msgstr ""
-"Erro: Somente conjuntos com subscrições de produtos multi-direitos podem ser "
-"adicionadas à chave de ativação com uma quantidade maior que um."
+"Erro: Somente conjuntos com subscrições de produtos multi-direitos podem ser"
+" adicionadas à chave de ativação com uma quantidade maior que um."
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author rgyorfy
@@ -819,8 +819,8 @@ msgstr ""
 
 #: src/main/java/org/candlepin/resource/JobResource.java:114
 msgid ""
-"You must specify one of owner key, consumer UUID, or principal name, but not "
-"all."
+"You must specify one of owner key, consumer UUID, or principal name, but not"
+" all."
 msgstr ""
 "Você deve especificar a chave propetária, o UUID do consumidor ou o nome "
 "principal, porém não todos."
@@ -1015,12 +1015,14 @@ msgstr "O arquivo não contém o arquivo consumer.json requerido"
 
 #: src/main/java/org/candlepin/sync/Importer.java:351
 msgid "The archive does not contain the required entitlements directory"
-msgstr "O arquivo não contém o diretório de direitos a serviços como requerido"
+msgstr ""
+"O arquivo não contém o diretório de direitos a serviços como requerido"
 
 #: src/main/java/org/candlepin/sync/Importer.java:608
 #, java-format
 msgid "The archive {0} is not a properly compressed file or is empty"
-msgstr "O arquivo {0} não é um arquivo comprimido adequadamente ou está vazio."
+msgstr ""
+"O arquivo {0} não é um arquivo comprimido adequadamente ou está vazio."
 
 #: src/main/java/org/candlepin/sync/ConsumerImporter.java:59
 msgid "No ID for upstream subscription management application."
@@ -1105,19 +1107,19 @@ msgid ""
 "subscription: {1}. A newer client may be available to address this problem."
 msgstr ""
 "O cliente deve suportar ao menos os certificados da  v{0} para utilizar "
-"subscrições: {1}. Um cliente mais novo pode estar disponível para solucionar "
-"este problema."
+"subscrições: {1}. Um cliente mais novo pode estar disponível para solucionar"
+" este problema."
 
 #: src/main/java/org/candlepin/service/impl/DefaultEntitlementCertServiceAdapter.java:278
 #, java-format
 msgid ""
 "Too many content sets for certificate {0}. A newer client may be available "
-"to address this problem. See kbase https://access.redhat.com/knowledge/"
-"node/129003 for more information."
+"to address this problem. See kbase "
+"https://access.redhat.com/knowledge/node/129003 for more information."
 msgstr ""
 "Muitos conjuntos de conteúdo para o certificado {0}. Um cliente mais novo "
-"pode estar disponível para solucionar este problema. Veja kbase https://"
-"access.redhat.com/knowledge/node/129003 para obter mais informações."
+"pode estar disponível para solucionar este problema. Veja kbase "
+"https://access.redhat.com/knowledge/node/129003 para obter mais informações."
 
 # translation auto-copied from project Candlepin, version master, document
 # keys, author rgyorfy
@@ -1195,7 +1197,8 @@ msgstr ""
 #: src/main/java/org/candlepin/controller/Entitler.java:146
 #, java-format
 msgid ""
-"Consumer does not support instance based calculation required by pool ''{0}''"
+"Consumer does not support instance based calculation required by pool "
+"''{0}''"
 msgstr ""
 
 #: src/main/java/org/candlepin/controller/Entitler.java:150
@@ -1213,15 +1216,15 @@ msgstr ""
 #: src/main/java/org/candlepin/controller/Entitler.java:158
 #, java-format
 msgid "Unable to entitle consumer to the pool with id ''{0}''.: {1}"
-msgstr ""
-"Incapaz de dar direitos ao consumidor no conjunto com o id \"{0}\".:{1}"
+msgstr "Incapaz de dar direitos ao consumidor no conjunto com o id \"{0}\".:{1}"
 
 #: src/main/java/org/candlepin/controller/Entitler.java:179
 #, java-format
 msgid ""
 "Insufficient pool quantity available for adjustment to entitlement ''{0}''."
 msgstr ""
-"Quantidade de Pool insuficiente disponível para acertos aos serviços ''{0}''."
+"Quantidade de Pool insuficiente disponível para acertos aos serviços "
+"''{0}''."
 
 #: src/main/java/org/candlepin/controller/Entitler.java:184
 #: src/main/java/org/candlepin/controller/Entitler.java:189
@@ -1336,7 +1339,8 @@ msgstr ""
 # keys, author gcintra
 #: src/main/java/org/candlepin/model/ConsumerCurator.java:405
 #, java-format
-msgid "The consumer with UUID {0} is a virtual guest. It does not have guests."
+msgid ""
+"The consumer with UUID {0} is a virtual guest. It does not have guests."
 msgstr ""
 "O consumidor com o UUID {0} é um convidado virtual. Ele não possui "
 "convidados."
